vlib/v/checker/tests/option_ref_init_err.out
vlib/v/checker/tests/option_ref_init_err.vv:9:18: warning: unnecessary default value of `none`: struct fields are zeroed by default
    7 | mut:
    8 |     a0 ?&Viewport
    9 |     a1 ?&Viewport = none
      |                     ~~~~
   10 |     a2 ?&Viewport = none
   11 |     a3 ?&Viewport = unsafe { nil }
vlib/v/checker/tests/option_ref_init_err.vv:10:18: warning: unnecessary default value of `none`: struct fields are zeroed by default
    8 |     a0 ?&Viewport
    9 |     a1 ?&Viewport = none
   10 |     a2 ?&Viewport = none
      |                     ~~~~
   11 |     a3 ?&Viewport = unsafe { nil }
   12 |     a4 ?&Viewport = nil
vlib/v/checker/tests/option_ref_init_err.vv:12:18: error: `nil` is only allowed in `unsafe` code
   10 |     a2 ?&Viewport = none
   11 |     a3 ?&Viewport = unsafe { nil }
   12 |     a4 ?&Viewport = nil
      |                     ~~~
   13 | }
   14 |
vlib/v/checker/tests/option_ref_init_err.vv:11:18: error: cannot assign `nil` to option value
    9 |     a1 ?&Viewport = none
   10 |     a2 ?&Viewport = none
   11 |     a3 ?&Viewport = unsafe { nil }
      |                     ~~~~~~
   12 |     a4 ?&Viewport = nil
   13 | }
vlib/v/checker/tests/option_ref_init_err.vv:12:18: error: cannot assign `nil` to option value
   10 |     a2 ?&Viewport = none
   11 |     a3 ?&Viewport = unsafe { nil }
   12 |     a4 ?&Viewport = nil
      |                     ~~~
   13 | }
   14 |
