vlib/v/checker/tests/option_ref_init_err.vv
struct Viewport {
mut:
	parent &Window
}

pub struct Window {
mut:
	a0 ?&Viewport
	a1 ?&Viewport = none
	a2 ?&Viewport = none
	a3 ?&Viewport = unsafe { nil }
	a4 ?&Viewport = nil
}

fn main() {
	_ := &Window{}
}
